# showroom-backend-api

./: .env  Cargo.toml  Dockerfile  README.md
migrations/2024-01-16-224730_create_post/: up.sql
migrations/2024-02-03-205338_create_posts/: up.sql
migrations/2024-11-20-000232_create_brands/: up.sql
migrations/2024-11-20-224335_create_models/: up.sql
migrations/2024-11-21-035234_create_versions/: up.sql
migrations/2024-11-22-000709_create_cars/: up.sql
migrations/2024-11-22-050544_create_sellers/: up.sql
migrations/2024-11-23-230300_create_listing/: up.sql
migrations/2024-11-24-205338_create_posts/: up.sql
src/: main.rs  schema.rs
src/database/: database.rs
src/models/: brand_models.rs  mod.rs  models.rs  post_models.rs
src/resource/: brand_controller.rs  mod.rs  post_controller.rs
src/service/: brand_service.rs  mod.rs  post_service.rs
src/utils/: brand_columns.rs  mod.rs  post_columns.rs
