[package]
name = "showroom-backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
dotenvy = "0.15.7"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros", "rt-multi-thread", "signal"] }
env_logger = "0.11.1"
tower-http = { version = "0.5.1", features = ["cors"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid"] }
uuid = { version = "1.6.1", features = ["serde", "v8", "v4"] }
serde_json = "1.0.111"
axum-macros = "0.4.1"

